deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bobocode-jpa
  labels:
    app: bobocode-jpa
spec:
  selector:
    matchLabels:
      app: bobocode-jpa
  template:
    metadata:
      labels:
        app: bobocode-jpa
    spec:
      containers:
        - name: bobocode-jpa
          image: us-central1-docker.pkg.dev/final-challenge-sav/bobocode-jpa-docker-repo/bobocode-jpa:v3
          ports:
            - containerPort: 8080
              protocol: TCP
