service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bobocode-jpa-service
spec:
  selector:
    app: bobocode-jpa
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 8080
  type: NodePort
